[gd_scene load_steps=2 format=2]

[ext_resource path="res://BulletSpawner.gd" type="Script" id=1]

[node name="BulletSpawner" type="Node"]

script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Wave_Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Wave_Timer" to="." method="_on_Wave_Timer_timeout"]


